[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/teleporter/teleporter.gd" type="Script" id=1]
[ext_resource path="res://themes/menu_theme/menu_theme.tres" type="Theme" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="TeleportLabel" type="Label" parent="."]
margin_left = -24.0
margin_top = -10.0
margin_right = 25.0
margin_bottom = 9.0
theme = ExtResource( 2 )
text = "Teleport"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
